External image loading and drawing.

--- a/ld35.html
+++ b/ld35.html
@@ -6,7 +6,11 @@
 <script type="text/javascript" src="ld35.js"></script>
 </head>
 <body>
-<canvas id="viewport" width="640" height="480"></canvas>
-<style type="text/css">canvas { cursor:none; }</style>
+<canvas id="viewport" width="700" height="765"></canvas>
+<img class="preload" src="img/test.png" id="test">
+<style type="text/css">
+canvas { cursor:none; }
+.preload { display:none; }
+</style>
 </body>
 </html>
