--- a/ld35.html
+++ b/ld35.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>LD35 ShapeShift by Dark Arts and Sciences</title>
+<script type="text/javascript" src="lib/howler.js"></script>
 <script type="text/javascript" src="ld35.js"></script>
 </head>
 <body>
