--- a/ld35.html
+++ b/ld35.html
@@ -2,15 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>LD35 ShapeShift by Dark Arts and Sciences</title>
+<title>LD35 Chameleon Clicker by Dark Arts and Sciences</title>
 <script type="text/javascript" src="lib/howler.js"></script>
 <script type="text/javascript" src="ld35.js"></script>
 </head>
 <body>
-<canvas id="viewport" width="600" height="700"></canvas>
-<img class="preload" src="img/test.png" id="test">
+<canvas id="viewport" width="450" height="550"></canvas>
+<img class="preload" src="img/image1.png" id="image1">
+<img class="preload" src="img/image2.png" id="image2">
+<img class="preload" src="img/image3.png" id="image3">
 <style type="text/css">
-canvas { cursor:none; }
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 450px;
+	cursor:none;
+}
 .preload { display:none; }
 </style>
 </body>
